# MN

./: build.gradle  noon.jks  notice.txt  settings.gradle
nativelib/src/main/cpp/: CMakeLists.txt  nativelib.cpp
nativelib/src/main/cpp/cool/: nativelib.cpp
nativelib/src/main/cpp/libs/arm64-v8a/: libicuio.so.73.1  libicutest.so.73.1  libicuuc.so.73.1
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_assign-1.82.0/: boost_assign-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_bind-1.82.0/: boost_bind-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_context-1.82.0/: boost_context-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_fiber-1.82.0/: boost_fiber-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_foreach-1.82.0/: boost_foreach-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_headers-1.82.0/: boost_headers-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_heap-1.82.0/: boost_heap-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_lambda-1.82.0/: boost_lambda-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_lexical_cast-1.82.0/: boost_lexical_cast-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_local_function-1.82.0/: boost_local_function-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_locale-1.82.0/: boost_locale-targets.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_move-1.82.0/: boost_move-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_mp11-1.82.0/: boost_mp11-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_multi_array-1.82.0/: boost_multi_array-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_multi_index-1.82.0/: boost_multi_index-targets.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_outcome-1.82.0/: boost_outcome-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_poly_collection-1.82.0/: boost_poly_collection-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_pool-1.82.0/: boost_pool-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_property_map-1.82.0/: boost_property_map-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_ptr_container-1.82.0/: boost_ptr_container-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/cmake/boost_random-1.82.0/: boost_random-config.cmake
nativelib/src/main/cpp/libs/arm64-v8a/icu/: pkgdata.inc
nativelib/src/main/cpp/libs/arm64-v8a/icu/73.1/: Makefile.inc
nativelib/src/main/cpp/libs/arm64-v8a/pkgconfig/: icu-uc.pc
nativelib/src/main/cpp/libs/armeabi-v7a/: libicui18n.so.73.1  libicuio.so.73  libicutest.so.73.1  libicutu.so.73.1  libicuuc.so.73
nativelib/src/main/cpp/libs/x86/: libicuio.so.73.1  libicutest.so.73.1  libicutu.so.73.1  libicuuc.so.73
nativelib/src/main/cpp/libs/x86/icu/: Makefile.inc
nativelib/src/main/cpp/libs/x86/pkgconfig/: icu-i18n.pc
nativelib/src/main/cpp/libs/x86_64/: libicutest.so.73  libicuuc.so.73.1
nativelib/src/main/cpp/libs/x86_64/icu/: Makefile.inc
nativelib/src/main/cpp/libs/x86_64/pkgconfig/: icu-io.pc
(+183 files in other folders)
